--- a/flat site/style.css
+++ b/flat site/style.css
@@ -68,7 +68,7 @@ body {
 	float: left;
 	width: 16.875em;
 	height: 7.6875em;
-	background: url(logo.png) center center no-repeat;
+	background: url(../olbp/img/logo.png) center center no-repeat;
 	background-size: cover;
 	text-indent: -9999px;
 }
